@@ -1,3 +1,9 @@
+2006-11-08  Erik Edelmann  <eedelman@gcc.gnu.org>
+
+	PR fortran/29630
+	PR fortran/29679
+	* gfortran.dg/initialization_2.f90: Test PRs 29630 and 29679 too.
+
 2006-11-06  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/29373
